--- a/examples/IRMQTTServer/platformio.ini
+++ b/examples/IRMQTTServer/platformio.ini
@@ -9,7 +9,8 @@ lib_deps_builtin =
 lib_deps_external =
   PubSubClient
   WifiManager@0.14
-  ArduinoJson
+  ArduinoJson@5.13.4
+monitor_speed = 115200
 
 [env:nodemcuv2]
 platform = espressif8266
@@ -20,6 +21,7 @@ build_flags = ${common.build_flags}
 lib_deps =
   ${common.lib_deps_builtin}
   ${common.lib_deps_external}
+monitor_speed = ${common.monitor_speed}
 
 [env:d1_mini]
 platform=espressif8266
@@ -30,6 +32,7 @@ build_flags = ${common.build_flags}
 lib_deps =
   ${common.lib_deps_builtin}
   ${common.lib_deps_external}
+monitor_speed = ${common.monitor_speed}
 
 [env:d1_mini_no_mqtt]
 platform=espressif8266
@@ -40,3 +43,4 @@ build_flags = ${common.build_flags} -DMQTT_ENABLE=false
 lib_deps =
   ${common.lib_deps_builtin}
   ${common.lib_deps_external}
+monitor_speed = ${common.monitor_speed}
